# hotel_manage

./: .flake8  .gitignore  README.md  TODO.md  babel.cfg  db_schema.xml  install.sh  justfile  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
src/: manage.py
src/apartments/: admin.py  apps.py  form.py  models.py  serializers.py  urls.py  views.py
src/apartments/migrations/: 0001_initial.py  0002_auto_20200721_1221.py  0002_auto_20200728_2209.py  0002_remove_apartment_floor.py  0003_auto_20200721_1222.py  0003_auto_20200824_1530.py
src/apps/apartments/: admin.py  apps.py  models.py
src/apps/apartments/migrations/: 0001_initial.py
src/apps/clients/: admin.py  apps.py  models.py
src/apps/clients/migrations/: 0001_initial.py
src/apps/orders/: models.py
src/apps/orders/migrations/: 0001_initial.py
src/clients/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
src/clients/migrations/: 0001_initial.py  0002_auto_20200824_1252.py  0003_remove_client_status.py
src/config/: settings.py  urls.py
src/orders/: admin.py  models.py  serializers.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  0002_auto_20200824_1524.py  0003_auto_20200825_2001.py
