[tool.poetry]
name = "hotel_manage"
version = "0.1.1"
description = "Simple Django project for manage hotel"
authors = [
    "Michael Savin <jtprogru@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
